syntax = "proto3";

package io.envoyproxy.pgv.grpc;

option java_multiple_files = true;

import "validate/validate.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1 [(validate.rules).string.const = "World"];
}

message HelloResponse {
    string message = 1;
}
